--- a/src/componets/Sidebar.css
+++ b/src/componets/Sidebar.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 .sidebar {
-  @apply w-60 h-screen bg-[#191919] flex flex-col;
+  @apply fixed top-0 left-0 w-60 h-screen bg-[#191919] flex flex-col;
 }
 
 .logo {
